--- a/mypage.html
+++ b/mypage.html
@@ -8,18 +8,16 @@
 		<link href="mypage.css" rel="stylesheet">
 	</head>
 	<body>
-		<div id="nav"><h1>Trevor West</h1></div>
-		<div class="mainInfo">
-			<p class="aboutMe">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			
-			
-			<img src="ANW.gif" alt="American Ninja Warrior">
-		</div>
+		<h1>Trevor West</h1>
+		<p class="aboutMe">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+
+		<img src="ANW.gif" id="me" alt="American Ninja Warrior">
 		
 		<table id="mainTable">
 			<tr>
-				<div class="tableCell">
-					<td>
+				<td>
+					<div class="tableCell">
 						<p><b>Favorite Things:</b></p>
 						<ul>
 							<li>Climbing</li>
@@ -27,18 +25,18 @@
 							<li>Working on Programming Projects</li>
 							<li>Watching television</li>
 						</ul>
-					</td>
-				</div>
-				<div class="tableCell">
-					<td>
+					</div>
+				</td>
+				<td>
+					<div class="tableCell">
 						<img src="ondra.jpg" alt="Adam Ondra" class="tableImgs">
-						<p>Adam Ondra is the best climber in the world. He inspires me through his creativity in problem solving. As of 2018, his highest onsight grade is 9a (5.14d) and his highest boulder is 8c+ (V16).</p>
-					</td>
-				</div>
+						<p>Adam Ondra is the best climber in the world. He inspires me through his creativity in problem solving. As of 2018, his highest onsight grade is 9a (5.14d) and his highest boulder grade is 8c+ (V16).</p>
+					</div>
+				</td>
 			</tr>
 			<tr>
-				<div class="tableCell">
-					<td>
+				<td>
+					<div class="tableCell">
 						<p><b>Things I do in a day:</b></p>
 						<ol type="a">
 							<li>Make 4 eggs for breakfast</li>
@@ -50,10 +48,10 @@
 							<li>Take a shower</li>
 							<li>Go to bed</li>
 						</ol>
-					</td>
-				</div>
-				<div class="tableCell">
-					<td>
+					</div>
+				</td>
+				<td>
+					<div class="tableCell">
 						<table id="courseTable">
 							<tr>
 								<th>Course Number</th>
@@ -86,26 +84,26 @@
 								<td>3</td>
 							</tr>
 						</table>
-					</td>
-				</div>
+					</div>
+				</td>
 			</tr>
 			<tr>
-				<div class="tableCell links">
-					<td>
+				<td>
+					<div class="tableCell links">
 						<p><b>My Favorite Websites:</b></p>
-						<a href="www.youtube.com">YouTube</a>
-						<a href="www.instagram.com/ninja_trevor">Instagram</a>
+						<a href="www.youtube.com">YouTube</a><br>
+						<a href="www.instagram.com/ninja_trevor">Instagram</a><br>
 						<a href="www.reddit.com">Reddit</a>
-					</td>
-				</div>
-				<div class="tableCell">
-					<td>
+					</div>
+				</td>
+				<td>
+					<div class="tableCell">
 						<p><b>My Favorite Quotes (in Latin):</b></p>
 						<p><q class="best">Vivamus, Moriendum Est</q> - Let us live, since we must die.</p>
 						<p><q>Vincit qui se vincit.</q> - He conquers who conquers himself.</p>
 						<p><q>Oderint dum metuant.</q> - Let them hate so long as they fear.</p>
-					</td>
-				</div>
+					</div>
+				</td>
 			</tr>
 		</table>
 	
