--- a/mypage.html
+++ b/mypage.html
@@ -1,113 +1,115 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="namespaceURI" lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>Trevor West | CIS 371-01</title>
-		<link href="mypage.css" rel="stylesheet">
-	</head>
-	<body>
-		<h1>Trevor West</h1>
-		<p class="aboutMe">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<title>Trevor West | CIS 371-01</title>
+	<link href="mypage.css" rel="stylesheet"/>
+</head>
+<body>
+	<h1>Trevor West</h1>
+	<p class="aboutMe">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 
-		<img src="ANW.gif" id="me" alt="American Ninja Warrior">
-		
-		<table id="mainTable">
-			<tr>
-				<td>
-					<div class="tableCell">
-						<p><b>Favorite Things:</b></p>
-						<ul>
-							<li>Climbing</li>
-							<li>Obstacle Course Racing</li>
-							<li>Working on Programming Projects</li>
-							<li>Watching television</li>
-						</ul>
-					</div>
-				</td>
-				<td>
-					<div class="tableCell">
-						<img src="ondra.jpg" alt="Adam Ondra" class="tableImgs">
-						<p>Adam Ondra is the best climber in the world. He inspires me through his creativity in problem solving. As of 2018, his highest onsight grade is 9a (5.14d) and his highest boulder grade is 8c+ (V16).</p>
-					</div>
-				</td>
-			</tr>
-			<tr>
-				<td>
-					<div class="tableCell">
-						<p><b>Things I do in a day:</b></p>
-						<ol type="a">
-							<li>Make 4 eggs for breakfast</li>
-							<li>Go to class</li>
-							<li>Eat lunch</li>
-							<li>Do homework</li>
-							<li>Go to the gym</li>
-							<li>Eat dinner</li>
-							<li>Take a shower</li>
-							<li>Go to bed</li>
-						</ol>
-					</div>
-				</td>
-				<td>
-					<div class="tableCell">
-						<table id="courseTable">
-							<tr>
-								<th>Course Number</th>
-								<th>Title</th>
-								<th>Credtis</th>
-							</tr>
-							<tr>
-								<td>CIS 350</td>
-								<td>Intro to Software Engineering</td>
-								<td>3</td>
-							</tr>
-							<tr>
-								<td>CIS 353</td>
-								<td>Database</td>
-								<td>3</td>
-							</tr>
-							<tr>
-								<td>BUS 201</td>
-								<td>Legal Environment for Business</td>
-								<td>3</td>
-							</tr>
-							<tr>
-								<td>CHM 116</td>
-								<td>Principles of Chemistry II</td>
-								<td>5</td>
-							</tr>
-							<tr>
-								<td>BMS 208</td>
-								<td>Human Anatomy</td>
-								<td>3</td>
-							</tr>
-						</table>
-					</div>
-				</td>
-			</tr>
-			<tr>
-				<td>
-					<div class="tableCell links">
-						<p><b>My Favorite Websites:</b></p>
-						<a href="www.youtube.com">YouTube</a><br>
-						<a href="www.instagram.com/ninja_trevor">Instagram</a><br>
-						<a href="www.reddit.com">Reddit</a>
-					</div>
-				</td>
-				<td>
-					<div class="tableCell">
-						<p><b>My Favorite Quotes (in Latin):</b></p>
-						<p><q class="best">Vivamus, Moriendum Est</q> - Let us live, since we must die.</p>
-						<p><q>Vincit qui se vincit.</q> - He conquers who conquers himself.</p>
-						<p><q>Oderint dum metuant.</q> - Let them hate so long as they fear.</p>
-					</div>
-				</td>
-			</tr>
-		</table>
-	
-		
-		<p>Run <a href="SpecRunner.html">Jasmine Tests</a></p>
-	</body>
+	<img src="ANW.gif" id="me" alt="American Ninja Warrior" />
+
+	<table id="mainTable">
+		<tr>
+			<td>
+				<div class="tableCell">
+					<p><b>Favorite Things:</b></p>
+					<ul>
+						<li>Climbing</li>
+						<li>Obstacle Course Racing</li>
+						<li>Working on Programming Projects</li>
+						<li>Watching television</li>
+					</ul>
+				</div>
+			</td>
+			<td>
+				<div class="tableCell">
+					<img src="ondra.jpg" alt="Adam Ondra" class="tableImgs" />
+					<p>Adam Ondra is the best climber in the world. He inspires me through his creativity in problem solving. As of 2018, his highest onsight grade is 9a (5.14d) and his highest boulder grade is 8c+ (V16).</p>
+				</div>
+			</td>
+		</tr>
+		<tr>
+			<td>
+				<div class="tableCell">
+					<p><b>Things I do in a day:</b></p>
+					<ol type="a">
+						<li>Make 4 eggs for breakfast</li>
+						<li>Go to class</li>
+						<li>Eat lunch</li>
+						<li>Do homework</li>
+						<li>Go to the gym</li>
+						<li>Eat dinner</li>
+						<li>Take a shower</li>
+						<li>Go to bed</li>
+					</ol>
+				</div>
+			</td>
+			<td>
+				<div class="tableCell">
+					<table id="courseTable">
+						<tr>
+							<th>Course Number</th>
+							<th>Title</th>
+							<th>Credtis</th>
+						</tr>
+						<tr>
+							<td>CIS 350</td>
+							<td>Intro to Software Engineering</td>
+							<td>3</td>
+						</tr>
+						<tr>
+							<td>CIS 353</td>
+							<td>Database</td>
+							<td>3</td>
+						</tr>
+						<tr>
+							<td>BUS 201</td>
+							<td>Legal Environment for Business</td>
+							<td>3</td>
+						</tr>
+						<tr>
+							<td>CHM 116</td>
+							<td>Principles of Chemistry II</td>
+							<td>5</td>
+						</tr>
+						<tr>
+							<td>BMS 208</td>
+							<td>Human Anatomy</td>
+							<td>3</td>
+						</tr>
+					</table>
+				</div>
+			</td>
+		</tr>
+		<tr>
+			<td>
+				<div class="tableCell links">
+					<p><b>My Favorite Websites:</b></p>
+					<a href="www.youtube.com">YouTube</a>
+					<br>
+					<a href="www.instagram.com/ninja_trevor">Instagram</a>
+					<br>
+					<a href="www.reddit.com">Reddit</a>
+				</div>
+			</td>
+			<td>
+				<div class="tableCell">
+					<p><b>My Favorite Quotes (in Latin):</b></p>
+					<p><q class="best">Vivamus, Moriendum Est</q> - Let us live, since we must die.</p>
+					<p><q>Vincit qui se vincit.</q> - He conquers who conquers himself.</p>
+					<p><q>Oderint dum metuant.</q> - Let them hate so long as they fear.</p>
+				</div>
+			</td>
+		</tr>
+	</table>
+
+
+	<p>Run <a href="SpecRunner.html">Jasmine Tests</a></p>
+</body>
 </html>
