--- a/mypage.html
+++ b/mypage.html
@@ -52,7 +52,7 @@
 			</td>
 			<td>
 				<div class="tableCell">
-					<table id="courseTable">
+					<table id="courseTable" border="2">
 						<tr>
 							<th>Course Number</th>
 							<th>Title</th>
@@ -89,13 +89,13 @@
 		</tr>
 		<tr>
 			<td>
-				<div class="tableCell links">
+				<div class="tableCell">
 					<p><b>My Favorite Websites:</b></p>
-					<a href="www.youtube.com">YouTube</a>
+					<a class="links" href="//www.youtube.com">YouTube</a>
 					<br />
-					<a href="www.instagram.com/ninja_trevor">Instagram</a>
+					<a class="links" href="//www.instagram.com/ninja_trevor">Instagram</a>
 					<br />
-					<a href="www.reddit.com">Reddit</a>
+					<a class="links" href="//www.reddit.com">Reddit</a>
 				</div>
 			</td>
 			<td>
