--- a/mypage.html
+++ b/mypage.html
@@ -38,7 +38,7 @@
 			<td>
 				<div class="tableCell">
 					<p><b>Things I do in a day:</b></p>
-					<ol type="a">
+					<ol id="things">
 						<li>Make 4 eggs for breakfast</li>
 						<li>Go to class</li>
 						<li>Eat lunch</li>
