--- a/mypage.html
+++ b/mypage.html
@@ -29,7 +29,7 @@
 				</div>
 			</td>
 			<td>
-				<div class="tableCell" style="background-color: aquamarine;">
+				<div class="tableCell">
 					<img src="ondra.jpg" alt="Adam Ondra" class="tableImgs" />
 					<p>Adam Ondra is the best climber in the world. He inspires me through his creativity in problem solving. As of 2018, his highest onsight grade is 9a (5.14d) and his highest boulder grade is 8c+ (V16).</p>
 				</div>
