--- a/mypage.html
+++ b/mypage.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="eng">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta http-equiv="cache-control" content="no-cache" />
 	<title>Trevor West | CIS 371-01</title>
 	<link href="mypage.css" rel="stylesheet"/>
 </head>
