--- a/mypage.html
+++ b/mypage.html
@@ -113,7 +113,7 @@
 	<p>Run <a href="SpecRunner.html">Jasmine Tests</a></p>
 	
 	<p>
-		<a href="http://validator.w3.org/check?uri=referer">
+		<a href="http://validator.w3.org/check?uri=https://trevorallenw.github.io/mypage.html">
 			<img
 	src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Transitional" height="31" width="88" />
 		</a>
